--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,38 +14,37 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse navbar-ex1-collapse">
               <ul class="nav navbar-nav navbar-right">
-                  <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                  <li class="hidden">
-                      <a class="page-scroll" href="#page-top"></a>
+                <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                <li class="hidden">
+                    <a class="page-scroll" href="#page-top"></a>
+                </li>
+                <% if user_signed_in? %>
+                  <!--<li class='navbar-right'>-->
+                  <!--  <%#= link_to('회원정보 수정하기', edit_user_registration_path) %>-->
+                  <!--</li>-->
+                  <li class='navbar-right'>
+                    <%= link_to('로그아웃', destroy_user_session_path) %>
                   </li>
-                  <% if user_signed_in? %>
-                    <!--<li class='navbar-right'>-->
-                    <!--  <%#= link_to('회원정보 수정하기', edit_user_registration_path) %>-->
-                    <!--</li>-->
-                    <li class='navbar-right'>
-                      <%= link_to('로그아웃', destroy_user_session_path) %>
-                    </li>
-                  <% else %>
-                    <!--<li class='navbar-right'>-->
-                    <!--  <%#= link_to('로그인하기', new_user_session_path)  %>-->
-                    <!--</li>-->
-                    <!--<li class='navbar-right'>-->
-                    <!--  <%#= link_to('회원가입', new_user_registration_path)  %>-->
-                    <!--</li>-->
-                  <% end %>
-                  
-                  <% if params[:controller] == 'locker' %>
-                    <li class='navbar-right'>
-                      <%#= link_to('중고책 서비스',  book_index_path) %>
-                    </li>
-                  <% elsif params[:controller] == 'book' %>
-                    <li class='navbar-right'>
-                      <%#= link_to('사물함 서비스', locker_index_path) %>
-                    </li>
-                  <% elsif params[:controller] == 'home' %>
-                  <% end %>
-                <li>
-                  <p class="navbar-text"><%= current_user.username rescue nil%></p>
+                <% else %>
+                  <!--<li class='navbar-right'>-->
+                  <!--  <%#= link_to('로그인하기', new_user_session_path)  %>-->
+                  <!--</li>-->
+                  <!--<li class='navbar-right'>-->
+                  <!--  <%#= link_to('회원가입', new_user_registration_path)  %>-->
+                  <!--</li>-->
+                <% end %>
+                
+                <% if params[:controller] == 'locker' %>
+                  <li class='navbar-right'>
+                    <%= link_to('중고책 서비스',  book_index_path) %>
+                  </li>
+                <% elsif params[:controller] == 'book' %>
+                  <li class='navbar-right'>
+                    <%= link_to('사물함 서비스', locker_index_path) %>
+                  </li>
+                <% end %>
+                <li class="navbar-text hidden-xs hidden-sm">
+                  <%= current_user.username rescue nil%>
                 </li>
               </ul>
           </div>
